some bugs on [orders, products]  controller fixed
